Started work on goal manager!

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,6 +1,7 @@
 {
     "price": "Цена",
     "currency": "Валюта",
+    "manager": "Ценовой менеджер",
     "save": "Сохранить",
     "remove": "Удалить",
     "set_price": "Установить цену",
