--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,10 +1,9 @@
 {
     "price": "Цена",
     "currency": "Валюта",
-    "manager": "Ценовой менеджер",
     "save": "Сохранить",
     "remove": "Удалить",
-    "set_price": "Установить цену",
+    "set_price": "Указать цену",
     "settings": "Настройки",
     "paid": "Оплачено!",
     "sortIncrease": "Цена (По возрастанию)",
